# staticpin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql.yml  publish.yml
docs/: api.md  index.md  installation.md  usage.md
src/staticpin/: __init__.py  cli.py  utils.py
tests/: test_staticpin.py
