[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "staticpin"
version = "0.1.0"
description = "Pin frontend static dependencies for Python web projects"
readme = "README.md"
authors = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"}
]
maintainers = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "httpx>=0.28.1",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/feldroy/staticpin/issues"
changelog = "https://github.com/feldroy/staticpin/releases"
documentation = "https://feldroy.github.io/staticpin/"
homepage = "https://github.com/feldroy/staticpin"

[project.scripts]
staticpin = "staticpin.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
